// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker renders correctly 1`] = `
<div>
  <div
    class="css-o0wi17-boxStyles-FieldContainer"
  >
    <label
      class="css-5wkuiz-boxStyles"
      for="combobox-input-:r0:"
      id="downshift-:r1:-label"
    >
      <span
        class="css-jro2y9-boxStyles-Text"
      >
        Select a time
      </span>
      <span
        class="css-k6o2y8-boxStyles-Text"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-1snwtx3-boxStyles-Text"
      id="field-combobox-input-:r0:-hint"
    >
      Start typing to see results
    </span>
    <div
      class="css-gl6n1p-ComboboxBase"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:r1:-menu"
        aria-describedby="field-combobox-input-:r0:-hint"
        aria-expanded="false"
        aria-invalid="false"
        aria-labelledby="downshift-:r1:-label"
        aria-required="false"
        autocomplete="off"
        class="css-wjczfb-ComboboxBase"
        id="combobox-input-:r0:"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="css-15zilkh-boxStyles-ComboboxButtonContainer"
      >
        <button
          aria-controls="downshift-:r1:-menu"
          aria-expanded="false"
          aria-label="Toggle menu"
          class="css-148kr79-BaseButton-ComboboxIconButton"
          id="downshift-:r1:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="css-qhpjst-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="6 9 12 15 18 9"
            />
          </svg>
        </button>
      </div>
      <ul
        aria-labelledby="downshift-:r1:-label"
        class="css-1jfsuam-boxStyles-Popover"
        id="downshift-:r1:-menu"
        role="listbox"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 0px);"
      />
    </div>
    <div
      aria-hidden="true"
      class="css-9l8g4f-Field"
    />
  </div>
</div>
`;

exports[`TimePicker renders correctly when loading 1`] = `
<div>
  <div
    class="css-o0wi17-boxStyles-FieldContainer"
  >
    <label
      class="css-5wkuiz-boxStyles"
      for="combobox-input-:r3:"
      id="downshift-:r4:-label"
    >
      <span
        class="css-jro2y9-boxStyles-Text"
      >
        Select a time
      </span>
      <span
        class="css-k6o2y8-boxStyles-Text"
      >
         
        (optional)
      </span>
    </label>
    <span
      class="css-1snwtx3-boxStyles-Text"
      id="field-combobox-input-:r3:-hint"
    >
      Start typing to see results
    </span>
    <div
      class="css-gl6n1p-ComboboxBase"
    >
      <input
        aria-activedescendant=""
        aria-autocomplete="list"
        aria-controls="downshift-:r4:-menu"
        aria-describedby="field-combobox-input-:r3:-hint"
        aria-expanded="true"
        aria-invalid="false"
        aria-labelledby="downshift-:r4:-label"
        aria-required="false"
        autocomplete="off"
        class="css-wjczfb-ComboboxBase"
        id="combobox-input-:r3:"
        role="combobox"
        type="text"
        value=""
      />
      <div
        class="css-15zilkh-boxStyles-ComboboxButtonContainer"
      >
        <button
          aria-controls="downshift-:r4:-menu"
          aria-expanded="true"
          aria-label="Toggle menu"
          class="css-148kr79-BaseButton-ComboboxIconButton"
          id="downshift-:r4:-toggle-button"
          tabindex="-1"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="css-qhpjst-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="18 15 12 9 6 15"
            />
          </svg>
        </button>
      </div>
      <ul
        aria-labelledby="downshift-:r4:-label"
        class="css-y860c8-boxStyles-Popover"
        id="downshift-:r4:-menu"
        role="listbox"
        style="position: absolute; left: 0px; top: 0px; transform: translate(0px, 8px); max-height: 195px; width: 0px;"
      >
        <li
          class="css-szdapm-boxStyles-ComboboxListItem"
        >
          <div
            class="css-1vtubv8-boxStyles"
          >
            <span
              aria-atomic="false"
              aria-label="Loading"
              class="css-1pq87bz-boxStyles"
            >
              <span
                aria-hidden="true"
                class="css-1g335xy-boxStyles-LoadingDots"
              />
              <span
                aria-hidden="true"
                class="css-qpiiog-boxStyles-LoadingDots"
              />
              <span
                aria-hidden="true"
                class="css-1n95smw-boxStyles-LoadingDots"
              />
            </span>
            <span
              class="css-1pd2agg-boxStyles-Text"
            >
              Loading
            </span>
          </div>
        </li>
      </ul>
    </div>
    <div
      aria-hidden="true"
      class="css-9l8g4f-Field"
    />
  </div>
</div>
`;
